pom.xml : refined.

--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
 	<inceptionYear>2011</inceptionYear>
 
 	<properties>
-		<maven.compiler.source>1.6</maven.compiler.source>
-		<maven.compiler.target>1.6</maven.compiler.target>
+		<project.compiler.source>1.6</project.compiler.source>
+		<project.compiler.target>1.6</project.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -29,8 +29,8 @@
 					<fork>true</fork>
 					<meminitial>128m</meminitial>
 					<maxmem>512m</maxmem>
-				 <source>1.6</source>
-				 <target>1.6</target>
+				 <source>$(project.compiler.source)</source>
+				 <target>$(project.compiler.target)</target>
 				</configuration>
 			</plugin>
 
@@ -107,8 +107,6 @@
 	</dependencies>
 
 	<modules>
-
-
 		<module>eventmatrix-core</module>
 	</modules>
 
