removed : unnecessary tests

--- a/eventmatrix-examples/pom.xml
+++ b/eventmatrix-examples/pom.xml
@@ -25,9 +25,9 @@
   		</dependency>
   	</dependencies>
   </dependencyManagement>
-  
+
   <modules>
-		<module>em-todo.txt</module>
-	</modules>
+		<module>freedays</module>
+  </modules>
 
 </project>
