--- a/eventmatrix-examples/freedays/pom.xml
+++ b/eventmatrix-examples/freedays/pom.xml
@@ -1,26 +1,47 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>eventmatrix-examples</artifactId>
-    <groupId>de.z35.commons</groupId>
-    <version>0.1</version>
-  </parent>
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>eventmatrix-examples</artifactId>
+		<groupId>de.z35.commons</groupId>
+		<version>0.1</version>
+	</parent>
 
-  <groupId>de.z35.commons</groupId>
-  <artifactId>freedays</artifactId>
-  <version>0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
-  <name>freedays</name>
-  <description>FreeDays with EventMatrix</description>
-  <dependencies>
-  	<dependency>
-  		<groupId>de.z35.commons</groupId>
-  		<artifactId>eventmatrix-core</artifactId>
-  		<version>0.1-SNAPSHOT</version>
-  		<type>jar</type>
-  		<scope>compile</scope>
-  	</dependency>
-  </dependencies>
+	<groupId>de.z35.commons</groupId>
+	<artifactId>freedays</artifactId>
+	<version>0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	<name>freedays</name>
+	<description>FreeDays with EventMatrix</description>
+
+	<contributors>
+		<contributor>
+			<name>Michael Thompson</name>
+			<url>http://michaelthompson.org/technikos/holidays.php</url>
+			<roles>
+				<role>inspirator</role>
+			</roles>
+		</contributor>
+	</contributors>
+
+	<dependencies>
+
+		<dependency>
+			<groupId>xalan</groupId>
+			<artifactId>xalan</artifactId>
+			<version>2.7.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>de.z35.commons</groupId>
+			<artifactId>eventmatrix-core</artifactId>
+			<version>0.1-SNAPSHOT</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+
+	</dependencies>
 
 </project>
