--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,26 @@
             <url>www.taege-berlin.de</url>
             <organization>AUCOTEAM GmbH, GERMANY</organization>
             <roles>
-                <role>consultant</role>
+                <role>webdesigner</role>
             </roles>
             <timezone>+1</timezone>
         </contributor>
+
+		<contributor>
+			<name>Miško Hevery</name>
+			<email>misko@hevery.com</email>
+			<url>http://misko.hevery.com/</url>
+			<roles>
+				<role>test guru</role>
+			</roles>
+			<properties>
+				<blog>http://googletesting.blogspot.com/2008/08/by-miko-hevery-so-you-decided-to.html</blog>
+				<guide>http://misko.hevery.com/attachments/Guide-Writing%20Testable%20Code.pdf</guide>
+			</properties>
+
+			<timezone>+1</timezone>
+		</contributor>
+
 
     </contributors>
 
